# phylogenetic_indexes

./: .gitignore  .readthedocs.yaml  README.md  dokr  mkdocs.yml  pyproject.toml  setup.py  test.py
.github/workflows/: ci.yaml  readthedocs.yaml
docs/: 02_contribute.md  index.md
docs/api/: indices.md
docs/templates/: instalation.md  todo.md
phylogenetic/: features.py
phylogenetic_features.egg-info/: PKG-INFO
phylogenetic_indices/: indices.py  pyproject.toml
tests/: test_indices.py
