[tool.poetry]
name = "phylogenetic-indices"
version = "1.0.0"
description = ""
authors = ["Domingos Dias"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
taskipy = "^1.12.2"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.24.0"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.taskipy.tasks]
lint = "blue --check  --diff ."
docs = "mkdocs serve"
test = "pytest -s -x --cov=phylogenetic_indices -vv" 
post_test = "coverage html"